[Elisei](BNK-009) front end improvements

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,8 +31,8 @@
     </aside>
 </main>
 
-<footer class="stickToBottom">
-    <p id="localDateTime"></p>
+<footer>
+    <p class="stickToBottom" id="localDateTime"></p>
     <script crossorigin="anonymous"
             integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ="
             src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
